[gd_scene load_steps=7 format=3 uid="uid://bmep2jcqxn771"]

[ext_resource type="PackedScene" uid="uid://nw7a44q0foff" path="res://Player.tscn" id="1_0wx2v"]
[ext_resource type="Script" path="res://main.gd" id="1_l2gwh"]
[ext_resource type="PackedScene" uid="uid://doeqttfx6xq6u" path="res://agent.tscn" id="2_1jih0"]
[ext_resource type="PackedScene" uid="uid://bvi4wswhwdo6x" path="res://ball.tscn" id="3_3pf0p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s2uwl"]
size = Vector2(1176, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0awh7"]
size = Vector2(20, 670)

[node name="Main" type="Node2D"]
script = ExtResource("1_l2gwh")

[node name="Player" parent="." instance=ExtResource("1_0wx2v")]
position = Vector2(42, 317)

[node name="Agent" parent="." instance=ExtResource("2_1jih0")]
position = Vector2(1110, 317)

[node name="Roof" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Roof"]
position = Vector2(578, -10)
shape = SubResource("RectangleShape2D_s2uwl")

[node name="Floor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(578, 658)
shape = SubResource("RectangleShape2D_s2uwl")

[node name="Ball" parent="." instance=ExtResource("3_3pf0p")]
position = Vector2(586, 332)

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(-22, 325)
shape = SubResource("RectangleShape2D_0awh7")

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(1178, 325)
shape = SubResource("RectangleShape2D_0awh7")

[node name="LeftLabel" type="Label" parent="."]
offset_left = 491.0
offset_top = 25.0
offset_right = 531.0
offset_bottom = 48.0
text = "0"
horizontal_alignment = 1

[node name="RightLabel" type="Label" parent="."]
offset_left = 627.0
offset_top = 23.0
offset_right = 667.0
offset_bottom = 46.0
text = "0"
horizontal_alignment = 1

[node name="Level" type="Label" parent="."]
offset_left = 997.0
offset_top = 20.0
offset_right = 1091.0
offset_bottom = 43.0
text = "Level: 1"

[node name="Label" type="Label" parent="."]
offset_left = 7.0
offset_top = 3.0
offset_right = 150.0
offset_bottom = 26.0
text = "ESC -  back to start"

[node name="Button" type="Button" parent="."]
offset_left = 485.0
offset_top = 154.0
offset_right = 685.0
offset_bottom = 269.0
text = "Start"

[connection signal="body_entered" from="Left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_right_body_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
